Add auth and password strength component

--- a/src/app/components/login-wrapper/login-wrapper.component.html
+++ b/src/app/components/login-wrapper/login-wrapper.component.html
@@ -2,7 +2,7 @@
   <div class="login">
     <div class="even-col">
       <div class="login-image">
-        <img src="https://picsum.photos/400/600" alt="login-image" />
+        <img src="./assets/login-image.jpg" alt="login-image" />
       </div>
       <div class="login-text">
         <app-login></app-login>
