--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,12 +1,8 @@
 .form {
   background-color: #ffffff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
   padding: 0 50px;
-  height: 100%;
   text-align: center;
+  min-width: 320px;
 
   p {
     font-size: 0.9rem;
@@ -21,15 +17,12 @@
     width: 100%;
   }
 
-  button {
-    border: none;
-    background-color: #2b86ff;
-    color: #ffffff;
-    font-size: 12px;
-    font-weight: bold;
-    padding: 12px 45px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    transition: transform 80ms ease-in;
+  .is-invalid {
+    border: 1px solid red;
+  }
+  .invalid-feedback p {
+    color: red;
+    margin: 0;
+    font-size: 0.8rem;
   }
 }
