--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,4 +58,17 @@ body {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
+
+  button {
+    border: none;
+    background-color: #2b86ff;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+  }
 }
