--- a/src/app/components/password-strength/password-strength.component.html
+++ b/src/app/components/password-strength/password-strength.component.html
@@ -9,5 +9,5 @@
 ></div>
 <p class="info">
   Your password must be 8-20 characters long, contain uppercase and lowercase
-  letters and at least one special character.
+  letters and at least one special character and number.
 </p>
