--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,3 +72,21 @@ body {
     transition: transform 80ms ease-in;
   }
 }
+
+@media screen and (max-width: 768px) {
+  body {
+    padding: 0 15px;
+
+    .even-col {
+      grid-template-columns: 1fr;
+
+      .login-image {
+        display: none;
+      }
+
+      .login-text {
+        max-width: 500px;
+      }
+    }
+  }
+}
