--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -15,6 +15,11 @@
     padding: 12px 15px;
     margin: 8px 0;
     width: 100%;
+
+    &:focus,
+    &:focus-visible {
+      outline: none;
+    }
   }
 
   .is-invalid {
